--- a/JW2005/JW2005.csproj
+++ b/JW2005/JW2005.csproj
@@ -221,6 +221,7 @@
     <Content Include="fonts\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\jw2005 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\jw2005 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\jw2005.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
